--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "node-js-sample",
-  "version": "0.1.0",
+  "name": "node-js-getting-started",
+  "version": "0.1.2",
   "description": "A sample Node.js app using Express 4",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.0.0"
+    "express": "~4.9.x",
+    "cool-ascii-faces": "~1.3.x",
+    "path": "~0.4.x",
+    "fs": "~0.0.x",
+    "morgan": "~1.3.x"
   },
   "engines": {
     "node": "0.10.x"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-sample"
+    "url": "https://github.com/heroku/node-js-getting-started"
   },
   "keywords": [
     "node",
     "heroku",
     "express"
-  ],
-  "author": "Mark Pundsack",
-  "contributors": [
-    "Zeke Sikelianos <zeke@sikelianos.com> (http://zeke.sikelianos.com)"
   ],
   "license": "MIT"
 }
